--- a/tasks/use-apt.yml
+++ b/tasks/use-apt.yml
@@ -14,7 +14,10 @@
     - apt-transport-https
 
 - name: add APT signing key for td-agent
-  apt_key: url=https://packages.treasuredata.com/GPG-KEY-td-agent state=present
+  apt_key:
+    url: http://packages.treasuredata.com/GPG-KEY-td-agent
+    id: BEE682289B2217F45AF4CC3F901F9177AB97ACBE
+    state: present
 
 - name: add td-agent repository
   apt_repository: repo='deb https://packages.treasuredata.com/2/{{ ansible_distribution|lower }}/{{ ansible_distribution_release|lower }}/ {{ ansible_distribution_release|lower }} contrib' state=present
