--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,7 +29,7 @@
 
 - name: rename default td-agent.conf
   command: creates="/etc/td-agent/td-agent.conf.bak" mv /etc/td-agent/td-agent.conf /etc/td-agent/td-agent.conf.bak
-  when: tdagent_setup_conf
+  when: tdagent_setup_conf | bool
 
 
 - name: copy new td-agent.conf from role's default
